andresfvalenciab se realiza actualización de .json

--- a/package.json
+++ b/package.json
@@ -4,3 +4,8 @@
   "description": "Tell your story! A Ghost theme designed for photoblogging",
   "author": "Gustav Lindqvist"
 }
+
+{
+  "PrimeroNombre": "andres",
+  "SegundoNombre": "Felipe"
+}
